--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(Vte)
 export(Vtr)
 export(rw_MetropolisC)
 export(split)
+import(microbenchmark)
 import(Rcpp)
 importFrom(stats,runif)
 importFrom(stats,rnorm)
